<resources>
    <string name="app_name" translatable="false">Jenius Travel</string>
    <string name="label_login">Login</string>
    <string name="label_username">Username</string>
    <string name="hint_username">Input your username here..</string>
    <string name="label_password">Password</string>
    <string name="hint_password">Input your password here..</string>
    <string name="button_signin">Sign In</string>
    <string name="label_name">Name</string>
    <string name="label_phone">Phone No</string>
    <string name="label_address">Address</string>
    <string name="label_profile">Profile</string>
    <string name="label_travel_list">Travel List</string>
</resources>