<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/margin_default"
        android:src="@drawable/jenius_logo" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_xl"
        android:text="@string/label_login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_size_headline"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textLogin"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_xxl"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_username" />

        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_s"
            android:text="@string/label_password" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonSignIn"
            style="@style/PrimaryButton"
            android:layout_marginTop="@dimen/margin_s"
            android:text="@string/button_signin" />

    </LinearLayout>

</RelativeLayout>