<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ProfileFragment">

    <com.androidnetworking.widget.ANImageView
        android:id="@+id/imageProfile"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:src="@android:drawable/ic_menu_gallery" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:orientation="horizontal"
        android:padding="@dimen/margin_s">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_name"
            android:textSize="@dimen/font_size_normal" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="John Doe"
            android:textSize="@dimen/font_size_normal" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_s">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_phone"
            android:textSize="@dimen/font_size_normal" />

        <TextView
            android:id="@+id/textPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="08123456789"
            android:textSize="@dimen/font_size_normal" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_s">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_address"
            android:textSize="@dimen/font_size_normal" />

        <TextView
            android:id="@+id/textAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jalan Burangrang No. 26"
            android:textSize="@dimen/font_size_normal" />

    </LinearLayout>
</LinearLayout>